--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^16.7.10",
+    "@vitejs/plugin-vue-jsx": "^1.1.7",
     "axios": "^0.21.1",
+    "element-plus": "^1.1.0-beta.8",
     "mockjs": "^1.1.0",
     "vue": "^3.2.6",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.29.3",
@@ -22,6 +26,7 @@
     "eslint-define-config": "^1.0.9",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-vue": "^7.17.0",
+    "js-cookie": "^3.0.0",
     "prettier": "^2.3.2",
     "typescript": "^4.3.2",
     "vite": "^2.5.1",
